Version 0.16.0
  added getListOfTokens & extractMDFTokens
  updated readme tests.md
  Now uses values for "useEventIndex", "useNENRD", "numberOfEvents" & "useSwitchTeach1"
  from mergConfig as well as MDF
  Updated backup & restore to support CANACE3(C) that uses indexed events
  Fixed issue with not setting group in add new node
  added useSlots property

Version 0.15.1
  Fixed issue in EventsListByNode not displaying bus events

Version 0.15.0
  Added REQUEST_NODE_EVENT_BY_INDEX
  Added TestDialog under develop flag
  Added Send NERD & Send NENRD under develop flag
  Added requestAllEventsByIndex utility function
  Added getter node_descriptor_useNENRD
  added getter node_descriptor_useEventIndex
  added event_teach_by_index used when useEventIndex is true
  added ActivateSlotDialog
  added EventIdentityDialog
  added re-assert FCU_compatibility to NodesView & NodeBackupDialog
  check if parameters loaded rather than disable buttons
  Added SwitchTeach1 (for CANACE3/CANACE3C)
  Block teach node if useEventIndex
  send CBUS message now keeps last values
  block edit variables & delete if useEventIndex unless in Node View
  added eventIdentifier validation to Events View

Version 0.14.0
  Added 'show events only' to BusTraffic side bar
  Added 'clear bus traffic' to BusTraffic side bar
  Added "Archive now" to LogsDialog
  JsonLogic (JLL) operators (keys) now forced to lowercase
  Added interval between selecting layouts to avoid over overwriting layput data
  names menu in NodesVariablesDialog now behind develop flag

Version 0.13.0
  Generate internal event when receiving LAYOUT_DATA
  NodesView & EventsByNodeView uses this new event to get settings, to update visible columns
  Added copy layout function to StartupDialog
  Added beta number if non-zero to version column in Nodes View
  Added 'enableGroup' to NodesView & EventsListByNode
  Added 'enableBusTraffic' to MainLayout
  Added column settings to BusEvents, EventsView & NodeEventsView