@@ -1,10 +1,11 @@
 import jsonLogic from 'json-logic-js'
 import jcc from 'json-case-convertor'
+import * as utils from "components/functions/utils.js"
 
 export class mdfLogic {
 
   constructor() {
-//    console.log("mdfLogic Constructor")
+    //utils.timeStampedLog("mdfLogic Constructor")
     this.node = undefined
     this.eventIdentifier = undefined
 
@@ -13,18 +14,37 @@ export class mdfLogic {
     //
 
     var EVoperator = function(a){
-      //console.log(`mdfLogic.parse EVoperator ${this.eventIdentifier} ${a}`)
-      return this.node.storedEventsNI[this.eventIdentifier].variables[a]
+      //utils.timeStampedLog(`mdfLogic.parse EVoperator ${this.eventIdentifier} ${a}`)
+      if (this.store.getters.node_useEventIndex(this.nodeNumber) == true){
+        utils.timeStampedLog(`mdfLogic.parse EVoperator by Index ${this.eventIdentifier} ${a}`)
+        return this.node.eventsByIndex[this.eventIndex].variables[a]
+      } else {
+        utils.timeStampedLog(`mdfLogic.parse EVoperator by Identifier ${this.eventIdentifier} ${a}`)
+        return this.node.storedEventsNI[this.eventIdentifier].variables[a]
+      }
     }.bind(this);
     jsonLogic.add_operation("ev", EVoperator);
 
     var EVbitOperator = function(a, b){
+      let eventVariable = undefined
       let result = false
-      let eventVariable = this.node.storedEventsNI[this.eventIdentifier].variables[a]
+      if (this.store.getters.node_useEventIndex(this.nodeNumber)){
+        eventVariable =  this.node.eventsByIndex[this.eventIndex].variables[a]
+      } else {
+        eventVariable = this.node.storedEventsNI[this.eventIdentifier].variables[a]
+      }
       if ((eventVariable & 2**b) > 0) { result = true}
       return result
     }.bind(this);
     jsonLogic.add_operation("evbit", EVbitOperator);
+
+    //
+    // event index operator
+    //
+    var INDEXoperator = function(){
+      return this.eventIndex
+    }.bind(this);
+    jsonLogic.add_operation("index", INDEXoperator);
 
     //
     // node parameter operators
@@ -70,27 +90,28 @@ export class mdfLogic {
   // added jcc library to convert all logic operations to lower case
   //
   evaluate(store, nodeNumber, logicExpression, eventIdentifier, eventIndex){
+    this.store = store
+    this.nodeNumber = nodeNumber
     this.node = store.state.nodes[nodeNumber]
     this.eventIdentifier = eventIdentifier
+    this.eventIndex = eventIndex
     // ensure all operations (keys) are lower case
     let lowercaseLogicExpression = jcc.lowerCaseKeys(logicExpression)
-    //console.log("mdfLogic.parse " + JSON.stringify(this.node))
-    //console.log("mdfLogic.parse " + JSON.stringify(lowercaseLogicExpression))
-    //console.log("mdfLogic.parse " + eventIdentifier)
-//    try{
+    //utils.timeStampedLog("mdfLogic.parse " + JSON.stringify(this.node))
+    //utils.timeStampedLog("mdfLogic.parse " + JSON.stringify(lowercaseLogicExpression))
+    //utils.timeStampedLog("mdfLogic.parse " + eventIdentifier)
+    try{
       let result = jsonLogic.apply(lowercaseLogicExpression)
       /*
-      console.log("mdfLogic.parse:"
+      utils.timeStampedLog("mdfLogic.parse:"
         + ' logic: ' + JSON.stringify(lowercaseLogicExpression)
         + ' result: ' + result )
       */
       return result
-      /*
     } catch(err){
-      console.log("mdfLogic.parse " + err)
+      utils.timeStampedLog("mdfLogic.parse " + err)
       return false
     }
-      */
   }
 
 }
