@@ -6,6 +6,7 @@ Version 0.16.0
   Updated backup & restore to support CANACE3(C) that uses indexed events
   Fixed issue with not setting group in add new node
   added useSlots property
+  Amended jsonLogic EV operators to support indexed events
 
 Version 0.15.1
   Fixed issue in EventsListByNode not displaying bus events
